# parlant-tutorial

./: .gitignore  setup.bat  tutorial_setup.bat
basic-client/: pyproject.toml
basic-client/src/basic_client/: client.py
tool-service/: README.md  products.json  pyproject.toml
tool-service/parlant_tool_service_starter/: service.py
