[tool.poetry]
name = "parlant-tool-service-starter"
version = "0.1.0"
description = "A starting point for Parlant tool services"
authors = ["Yam Marcovitz <yam@emcie.co>"]
license = "apache2"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
